--- a/m-tourisme/src/MTLBundle/Resources/views/Default/navBar.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/navBar.html.twig
@@ -1,3 +1,4 @@
+<!-- Script NavBar sticky -->
 <script>
     $(window).scroll(function (event) {
         // A chaque fois que l'utilisateur va scroller
@@ -27,6 +28,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+                <!-- Script de scroll -->
                 <script>
                     $(document).ready(function (){
                         $("#metier").click(function (){
@@ -38,6 +40,7 @@
                 </script>
 
                 <li class="titreMenu"><a class="lienMenu" href="#" id="metier">Notre Métier</a></li>
+                <!-- Script de scroll -->
                 <script>
                     $(document).ready(function (){
                         $("#produit").click(function (){
@@ -48,7 +51,7 @@
                     });
                 </script>
                 <li class="titreMenu"><a class="lienMenu" href="#" id="produit">GéoMOTifs</a></li>
-
+                <!-- Script de scroll -->
                 <script>
                     $(document).ready(function (){
                         $("#actu").click(function (){
@@ -59,6 +62,7 @@
                     });
                 </script>
                 <li class="titreMenu"><a class="lienMenu" href="#" id="actu">Actualités</a></li>
+                <!-- Script de scroll -->
                 <script>
                     $(document).ready(function (){
                         $("#nousContacter").click(function (){
