--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -7,25 +7,30 @@
 </div>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-1 col-md-1 col-sm-1 hidden-xs titreNosProduits">
-            <h1>Produits</h1>
+        <div class="col-lg-6">
+            <div class="row">
+                <div class="col-lg-12">
+                    <video class="vid" playsinline autoplay muted loop>
+                        <source src="{{ asset('videos/orleanshg.mp4') }}" type="video/mp4">
+                    </video>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <a class="linkYT" target="_blank" href="https://www.youtube.com/channel/UCj_DmGMNzw3DTMUMyYoyoyQ">Voir la vidéo sur youtube</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-5 col-md-4">
-            <video class="vid" playsinline autoplay muted loop>
-                <source src="{{ asset('videos/orleanshg.mp4') }}" type="video/mp4">
-            </video>
-        </div>
-        <div class="col-lg-6 col-md-5">
+        <div class="col-lg-6">
             <h2 class="titreProduit">Développez un nouveau thème de visite</h2><br/>
             <p class="txtGeo">
                 Territoire, Ville, monument, lieu de visite...<br/>
                 <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe des valorisations du
-                <strong>patrimoine</strong> par les détails (ornementation, architecture...).
-                Ils sont omniprésents, on ne les voit pas, mais sans eux notre <strong>patrimoine</strong> aurait moins
+                <strong>patrimoine</strong> par les <em>détails</em> (ornementation, architecture...).
+                Ils sont omniprésents, on ne les voit pas, mais sans eux notre patrimoine aurait moins
                 de saveurs.
                 <br/>
-                Vous disposez d'un <strong>patrimoine</strong> éligible et souhaitez renouveler l'intérêt pour votre
+                Vous disposez d'un patrimoine éligible et souhaitez renouveler l'intérêt pour votre
                 destination ? Attirer de nouveaux publics ?
                 Développer la notoriété grâce à une matière visuelle par essence ?<br/>
                 Adhérez à <span class="geomotifs">GéoMOTifs !</span> l'offre ludique de visite in-situ entièrement
