--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -14,3 +14,14 @@
     font-size: 300%;
     color: #000;
 }
+
+.guillemets1 {
+    margin-top: 5%;
+    width: 24%;
+}
+
+.guillemetsdown1 {
+    width: 50%;
+    height: 70%;
+    margin-top: 40%;
+}
