--- a/m-tourisme/app/Resources/views/base.html.twig
+++ b/m-tourisme/app/Resources/views/base.html.twig
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}m-Tourisme Ludique{% endblock %}</title>
+    <!-- SEO -->
     <meta name="description" content="m-Tourisme Ludique - Création d'usages mobiles ludiques
 appliqués au tourisme et à la culture - Orléans Loiret (45)">
     <meta name="keywords" content="application, mobile, ludique, tourisme, culture, edition, patrimoine, motif, ornement,
 architecture, geomotifs, details, geocaching">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="1 month">
-    
+
         <!-- FavIcon -->
     <link rel="icon" type="image/png" href="{{ asset('image/favicon.png')}}" />
 
     {% block stylesheets %}
+
         <!-- Bootstrap -->
         <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
+
         <!-- CSS Perso -->
         <link rel="stylesheet" type="text/css" href="{{ asset('css/mTourisme.css')}}">
+
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{{ asset('css/fonts.css')}}">
@@ -40,6 +44,7 @@ architecture, geomotifs, details, geocaching">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     {% endblock %}
+
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 {% block body %}
