--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -1,4 +1,4 @@
-<div class="container-fluid " id="ancreProduit">
+<div class="container-fluid " id="ancreProduit" xmlns="http://www.w3.org/1999/html">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="titreGeo">GéoMOTifs</h1>
@@ -26,15 +26,16 @@
             <p class="txtGeo">
                 Territoire, Ville, monument, lieu de visite...<br/>
                 <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe des valorisations du
-                <strong>patrimoine</strong> par les <em>détails</em> (ornementation, architecture...).
-                Ils sont omniprésents, on ne les voit pas, mais sans eux notre patrimoine aurait moins
-                de saveurs.
+                <strong class="motAccroche">patrimoine</strong> par les <strong class="motAccroche">détails</strong>
+                (<strong class="motAccroche">ornementation, architecture</strong>...).
+                Ils sont omniprésents, on ne les voit pas, mais sans eux notre <strong class="motAccroche">patrimoine</strong>
+                    aurait moins de saveurs.
                 <br/>
-                Vous disposez d'un patrimoine éligible et souhaitez renouveler l'intérêt pour votre
+                Vous disposez d'un <strong class="motAccroche">patrimoine</strong> éligible et souhaitez renouveler l'intérêt pour votre
                 destination ? Attirer de nouveaux publics ?
                 Développer la notoriété grâce à une matière visuelle par essence ?<br/>
-                Adhérez à <span class="geomotifs">GéoMOTifs !</span> l'offre ludique de visite in-situ entièrement
-                dédiée à la valorisation des détails !
+                Adhérez à <span class="geomotifs">GéoMOTifs !</span> l'offre <strong class="motAccroche">ludique</strong>
+                de visite in-situ entièrement dédiée à la <strong class="motAccroche">valorisation des détails</strong> !
             </p>
         </div>
     </div>
