--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -47,9 +47,17 @@
     text-align: center;
 }
 
+.motAccroche {
+    font-weight: normal;
+}
+
 .citation {
     font-style: italic;
     font-size: 90%;
+}
+
+.android {
+    margin-left: 50%;
 }
 
 .citationLeft {
