debug marge site

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -72,8 +72,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-12 linkGeo">
-            <a href="http://www.geomotifs.fr/"><img  class="img-responsive" img align="center" src="{{ asset('image/logo-geomotifs.png') }}" alt="site de Géomotifs"></a>
+        <div class="col-lg-12 linkGeomotifs">
+            <a href="http://www.geomotifs.fr/"><img  class="img-responsive center-block" src="{{ asset
+                ('image/logo-geomotifs.png') }}" alt="site de Géomotifs"></a>
         </div>
     </div>
     <div class="row">
@@ -85,7 +86,8 @@
         <div class="col-lg-12 FacebookGeo">
             <div class="fb-page" data-href="https://www.facebook.com/geomotifs" data-tabs="timeline,events,messages"
                  data-width="500" data-height="6    00" data-small-header="false" data-adapt-container-width="true"
-                 data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/geomotifs" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/geomotifs">Géomotifs</a></blockquote></div>
+                 data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook
+                 .com/geomotifs" class="fb-xfbml-parse-ignore "><a href="https://www.facebook.com/geomotifs">Géomotifs</a></blockquote></div>
         </div>
     </div>
     <hr class="separe">
