--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -32,23 +32,24 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12 lens">
-                                    <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive imgInLens img-circle" alt="Image d'actu">
+                                <div class="col-xs-12 lens">
+                                    <img src="{{ asset('upload/' ~ actu.image) }}" class="
+                                                                imgInLens img-circle center-block" alt="Image d'actu">
                                     <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12">
+                                <div class="col-xs-12">
                                     <p class="txtActu">{{ actu.contenu|truncate(100, true,'...') }}</p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12">
+                                <div class="col-xs-12">
                                     <p><a class="orange" href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a></p>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-12">
+                                <div class="col-xs-12">
                                     <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
                                 </div>
                             </div>
