--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -74,7 +74,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12 linkGeomotifs">
-            <a href="http://www.geomotifs.fr/"><img  class="img-responsive center-block" src="{{ asset
+            <a href="http://www.geomotifs.fr/" target="_blank"><img  class="img-responsive center-block" src="{{ asset
                 ('image/logo-geomotifs.png') }}" alt="site de Géomotifs"></a>
         </div>
     </div>
