--- a/m-tourisme/web/css/stylesheetSectionImage.css
+++ b/m-tourisme/web/css/stylesheetSectionImage.css
@@ -2,8 +2,8 @@
 	background-image: url(../image/game-image-opaque.jpg);
 	background-attachment: fixed;
 	background-size: cover;
-	height: 70vh;
-    width: 100vw;
+	height: 70%;
+    width: 100%;
 	margin-top: 5%;
 }
 
@@ -29,6 +29,11 @@
 .iphone {
 	position: relative;
 	bottom: 140px;
-	left: 30%;
 	width: 65%;
+	margin: 0px;
+	margin-right: 0px;
+}
+
+.row {
+	margin: 0px;
 }
