--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
@@ -6,7 +6,8 @@
                 <img class="guillemets" src="{{ asset ('image/guillemets up.png')}}" alt="image guillemets">
             </div>
             <div class="col-xs-offset-1 col-xs-5">
-                <img class="iphone hidden-xs img-responsive" src="{{ asset ('image/iPhone-footer.png')}}" alt="iphone geomotifs">
+                <img class="iphone hidden-xs img-responsive center-block" src="{{ asset ('image/iPhone-footer.png')}}"
+                     alt="iphone geomotifs">
             </div>
         </div>
         <div class="row">
