update carousel & change txt

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/header.html.twig
@@ -16,7 +16,7 @@
                                 col-md-9 col-md-offset-0
                                 col-lg-8 col-lg-offset-0 logo_text">
                         <h1 class="marque">Tourisme Ludique</h1><br/>
-                        <p class="slogan">CREATION D'USAGES MOBILES LUDIQUES</p><br/>
+                        <p class="slogan">CREATION D'USAGES MOBILES LUDIQUES APPLIQUES AU TOURISME ET A LA CULTURE</p><br/>
                     </div>
                 </div>
             </div>
