--- a/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
@@ -1,9 +1,9 @@
     <div class="container-fluid notre_philo" id="ancreMetier">
         <!----- titre + text ----->
         <div class="row">
-            <h1 class="titreMetier">Valoriser votre patrimoine</h1>
+            <h1 class="titreMetier">Prendre plaisir à s'enrichir</h1>
             <p class="txt-presentation">
-                Créée fin 2013, m-Tourisme Ludique édite des solutions numériques dédiées à la <strong class="accrocheMetier">valorisation ludique et pédagogique de patrimoine matériels et immatériels.</strong>
+                m-Tourisme Ludique édite des solutions numériques dédiées à la <strong class="accrocheMetier">valorisation ludique et pédagogique de patrimoines matériels et immatériels.</strong>
             </p>
         </div>
 
