--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -25,7 +25,7 @@
             <h2 class="titreProduit">Développez un nouveau thème de visite</h2><br/>
             <p class="txtGeo">
                 Territoire, Ville, monument, lieu de visite...<br/>
-                <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe des valorisations du
+                <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe de valorisation du
                 <strong class="motAccroche">patrimoine</strong> par les <strong class="motAccroche">détails</strong>
                 (<strong class="motAccroche">ornementation, architecture</strong>...).
                 Ils sont omniprésents, on ne les voit pas, mais sans eux notre <strong class="motAccroche">patrimoine</strong>
@@ -63,6 +63,10 @@
         <div class="row citation">
             <div class="col-lg-12">
                 <p class="citationLeft">"GéoMOTifs, une chasse aux décors ludique touristique et culturelle 100% originale"</p>
+            </div>
+        </div>
+        <div class="row citation">
+            <div class="col-lg-12">
                 <p class="citationRight">"Le Géocaching des mots et des formes"</p>
             </div>
         </div>
@@ -80,7 +84,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <p class="txtFB">Et également sur Facebook</p>
+            <p class="txtFB">Et devenez accros aux motifs en contribuant sur notre page Facebook</p>
         </div>
     </div>
     <div class="row">
