--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage1.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage1.html.twig
@@ -8,7 +8,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <blockquote class="textImage1">La connaissance est une richesse que l'on peut donner sans s'appauvrir</blockquote>
+                <p class="textImage1">La connaissance est une richesse que l'on peut donner sans s'appauvrir</p>
             </div>
         </div>
         <div class="row">
