--- a/m-tourisme/web/css/stylesheetActu.css
+++ b/m-tourisme/web/css/stylesheetActu.css
@@ -87,3 +87,16 @@
 .goToList:hover {
     color: #EE6616;
 }
+
+.carousel-control.left {
+    background:none;
+}
+
+.carousel-control.right {
+    background:none;
+}
+
+.carousel-indicators li {
+    border-color: black;
+    background-color: #EE6616;
+}
