--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -2,7 +2,7 @@
     background-image: url(../image/img_archi/ruelle_paysage_n&b_opacité50_2000x814.jpeg);
     background-attachment: fixed;
     background-size: cover;
-    height: 120%;
+    height: 60vh;
     width: 100%;
 }
 
@@ -23,5 +23,5 @@
 .guillemetsdown1 {
     width: 50%;
     height: 70%;
-    margin-top: 40%;
+    margin-top: 20%;
 }
