--- a/m-tourisme/app/Resources/views/Emails/emailPost.html.twig
+++ b/m-tourisme/app/Resources/views/Emails/emailPost.html.twig
@@ -1,1 +1,7 @@
-Le contenu du mail
+<h3>Bonjour,</h3>
+
+<p>
+    {{ .prenom }} {{ nom }} - {{ entreprise }} ({{ email }}) vous a envoyé le message ci-dessous : <br>
+    {{ message }}
+</p>
+
