--- a/m-tourisme/app/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/app/Resources/views/actu/edit.html.twig
@@ -6,6 +6,14 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleEdit.css')}}">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/headerAdminStyle.css')}}">
     <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetFooter.css')}}">
+    <!-- include libraries(jQuery, bootstrap) -->
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+    <!-- include summernote css/js-->
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.css" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.js"></script>
+    <script src="lang/summernote-fr-FR.js"></script>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/fonts.css')}}">
@@ -20,9 +28,10 @@
 
                         {{ form_start(edit_form) }}
                             {{ form_row(edit_form.titre, { 'attr': {'class': 'form-control input-lg'}}) }}<br/>
-                            {{ form_row(edit_form.contenu, { 'attr': {'class': 'form-control', 'rows': '15'}}) }}<br/>
+                            {{ form_row(edit_form.contenu, { 'attr': {'class': 'summernote'}}) }}<br/>
                             {{ form_row(edit_form.date, {value : "now"|date("d/m/Y")}) }}<br/>
-                            {{ form_widget(edit_form.image) }}<br/>
+                            {{ form_widget(edit_form.image, { 'attr': {'class': ' btn btn-warning '}})
+                            }}<br/>
                         {{ form_end(edit_form) }}
                 </div>
                 <div class="container-fluid">
@@ -31,7 +40,9 @@
                             <a  class="btn btn-primary btn-lg" href="{{ path('actu_index') }}">Revenir à la liste</a>
                         </div>
                         <div class="col-xs-4">
-                            <input type="submit" class="btn btn-success btn-lg" value="Edit" />
+                            {{ form_start(edit_form) }}
+                                <input type="submit" class="btn btn-success btn-lg" value="Edit" />
+                            {{ form_end(edit_form) }}
                         </div>
                         <div class="col-xs-4">
                             {{ form_start(delete_form) }}
@@ -44,6 +55,17 @@
                 </div>
                 <br/>
             </div>
+
+        <script>
+
+        $(document).ready(function() {
+        $('.summernote').summernote();
+
+
+        });
+
+        </script>
+
     {% block footer %}
         {{ include('footerAdmin.html.twig') }}
     {% endblock %}
