--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -2,6 +2,13 @@
 {% block stylesheets %}
     <!-- Bootstrap -->
     <link href="{{ asset('css/bootstrap.min.css')}}" rel="stylesheet">
+    <!-- include libraries(jQuery, bootstrap) -->
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+    <!-- include summernote css/js-->
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.css" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.js"></script>
     <!-- CSS Perso -->
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleNew.css')}}">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/headerAdminStyle.css')}}">
@@ -23,9 +30,9 @@
                 {{ form_start(form) }}
 
                     {{ form_row(form.titre, { 'attr': {'class': 'form-control input-lg'}}) }}<br/>
-                    {{ form_row(form.contenu, { 'attr': {'class': 'form-control', 'rows': '15'}}) }}<br/>
+                    {{ form_row(form.contenu, { 'attr': {'class': 'summernote'}}) }}<br/>
                     {{ form_row(form.date) }}<br/>
-                    {{ form_row(form.image) }}<br/>
+                    {{ form_row(form.image, { 'attr': {'class': ' btn btn-warning block-center'}}) }}<br/>
         </div>
 
             <br/>
@@ -45,6 +52,17 @@
 
         </div>
     </div>
+<script>
+    $(document).ready(function() {
+    $('.summernote').summernote({
+        height: 300,                 // set editor height
+        minHeight: null,             // set minimum height of editor
+        maxHeight: null,             // set maximum height of editor
+        focus: true                  // set focus to editable area after initializing summernote
+    });
+    });
+</script>
+
     {% block footer %}
         {{ include('footerAdmin.html.twig') }}
     {% endblock %}
