--- a/m-tourisme/app/Resources/views/layoutAdmin.html.twig
+++ b/m-tourisme/app/Resources/views/layoutAdmin.html.twig
@@ -1,5 +1,17 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <!-- include libraries(jQuery, bootstrap) -->
+    <link href="{{  asset('css/bootstrap.css')}}" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+
+    <!-- include summernote css/js-->
+    <link href="{{  asset('css/summernote.css')}}" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.js"></script>
+
+{% endblock %}
+
 
 
 {% block body %}
