--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -28,7 +28,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h2 class="news">{{ actu.titre }}</h2>
+                                    <h2 class="news">{{ actu.titre | truncate(40, true, '...')}}</h2>
                                 </div>
                             </div>
                             <div class="row">
@@ -40,7 +40,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <p class="txtActu">{{ actu.contenu|truncate(100, true,'...') }}</p>
+                                    <p class="txtActu center-block">{{ actu.contenu|truncate(100, true,'...') | raw}}</p>
                                 </div>
                             </div>
                             <div class="row">
