--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -24,8 +24,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         {% for actu in actus %}
-                            <h2 class="titreActu">{{ actu.titre }}</h2>
-                            <p class="contenu">{{ actu.contenu [:150] }}</p>
+                            <h2 class="titreActu">{{ actu.titre |truncate(40, true,'...')}}</h2>
+                            <p class="contenu">{{ actu.contenu |truncate(100, true,'...') | raw }}</p>
                             <a href="{{ path('afficher_actu', {'id': actu.id}) }}"><img src="{{ asset('upload/' ~ actu.image) }}"
                                                                                         class="img-responsive img-actu"></a><br/>
                             <a href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a>
