--- a/m-tourisme/web/css/stylesheetListeActu.css
+++ b/m-tourisme/web/css/stylesheetListeActu.css
@@ -50,3 +50,8 @@ hr {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(238, 102, 22, 0.75), rgba(0, 0, 0, 0));
 }
+
+img {
+    width: 35%;
+    height: 32%;
+}
