--- a/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
@@ -1,6 +1,6 @@
 {% block contact %}
 
-    {{ form_start(form) }}
+    {{ form_start(form, {'method' : 'POST'})}}
 
         <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
             <h2 class="accrocheForm">Un projet, une idée, contactez-nous :</h2></br>
