--- a/m-tourisme/web/css/stylesheet_notre_philosophie.css
+++ b/m-tourisme/web/css/stylesheet_notre_philosophie.css
@@ -56,6 +56,7 @@
 .titrePoint {
 
     font-family: DIN-Bold;
+    font-size: 200%;
 }
 
 .txtPoint {
@@ -71,9 +72,8 @@
 }
 
 .img_trois_points:hover {
-    transform: rotateY(180deg);
-    transform-style: preserve-3d;
-    transition: 0.6s;
+    transform: scale(1.2);
+    transition: 0.4s;
     position: relative;
 }
 
