--- a/m-tourisme/app/Resources/views/actu/index.html.twig
+++ b/m-tourisme/app/Resources/views/actu/index.html.twig
@@ -27,8 +27,7 @@
                 <th>Titre</th>
                 <th>Contenu</th>
                 <th>Date</th>
-                <th>Image</th>
-                <th>Image 2</th>
+                <th>Image Lentille</th>
                 <th>Actions</th>
             </tr>
         </thead>
