Changed css flash message form

--- a/m-tourisme/src/AdminBundle/Resources/views/Default/emailPost.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/Default/emailPost.html.twig
@@ -20,7 +20,7 @@
         <h1>Bonjour Sylvain,</h1>
 
         <p>
-            Vous avez reçu un message de {{ prenom }} {{ nom }} ({{ entreprise }}). <br>
+            Vous avez reçu un message de {{ prenom }} {{ nom }} {{ entreprise }}. <br>
 
             Voici le contenu de son message :<br>
             {{ message }} <br>
