--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -33,9 +33,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 lens">
-                                    <img src="{{ asset('upload/' ~ actu.image) }}" class="
-                                                                imgInLens img-circle center-block" alt="Image d'actu">
-                                    <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
+                                    <img src="{{ asset('upload/' ~ actu.image) }}" class="imgInLens img-circle center-block" alt="Image d'actu">
+                                    <img src="{{ asset('image/lens_reflect.png')}}" class="img-responsive lens-actu" alt="lentille">
                                 </div>
                             </div>
                             <div class="row">
