--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -8,12 +8,12 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 embed-responsive embed-responsive-4by3">
-            <video class="embed-responsive-item" playsinline autoplay muted loop>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 videocontainer">
+                <video playsinline autoplay muted loop>
                 <source src="{{ asset('videos/orleanshg.mp4') }}" type="video/mp4">
-            </video>
+                </video>
         </div>
-        <div class="col-lg- col-md-6 col-sm-12 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <h2 class="titreProduit">Développez un nouveau thème de visite</h2><br/>
             <p class="txtGeo">
                 Territoire, Ville, monument, lieu de visite...
@@ -93,7 +93,7 @@
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 hidden-xs FacebookGeo">
             <div class="fb-page" data-href="https://www.facebook.com/geomotifs" data-tabs="timeline,events,messages"
-                 data-width="500" data-height="600" data-small-header="false" data-adapt-container-width="false"
+                 data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false"
                  data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook
                  .com/geomotifs" class="fb-xfbml-parse-ignore "><a href="https://www.facebook.com/geomotifs">Géomotifs</a></blockquote>
             </div>
@@ -119,7 +119,7 @@
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="remerciement">Réalisé par:</p>
+                    <p class="remerciement">Une application réalisée par:</p>
                 </div>
             </div>
             <div class="row">
