--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -1,10 +1,15 @@
-.vid {
-    height: 50vh;
-    border-radius: 5%;
-    border: 2px solid #EE6616;
+.videocontainer {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
 }
-.embed-responsive {
-    height: 0%;
+
+.videocontainer video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .txtGeo {
